Fixed an overflow issue on ROE

--- a/static_files/scss/jj-storefront.scss
+++ b/static_files/scss/jj-storefront.scss
@@ -496,7 +496,6 @@ a {
                         width    : 100%;
                         height   : 100%;
                         border   : 1px solid #ebebeb;
-                        overflow : hidden;
                         position : relative;
                         @include background-size(cover);
                         //cursor: pointer;
